--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,11 @@
 @tailwind utilities;
 
 h1 {
-
+  font-family: 'General Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 150%;
 }
 
 h2 {
